2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-read/src/e-read.c (int main): Call
	e_reset_system() before accessing Epiphany chip.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-write/src/e-write.c (int main): Call
	e_reset_system() before writing to Epiphany chip.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-loader/src/e-loader.c (int main): Always call
	'e_reset_system()'. Make reset flags no-ops. Do not call
	'e_finalize()'.
	(void usage): Remove reset flags.

2015-01-15  Ola Jeppsson  <ola@adapteva.com>

	* src/e-utils/e-hw-rev/Makefile: Add e-hal to include search path.
	Link with e-hal.
	* src/e-utils/e-hw-rev/e-hw-rev.c (void print_platform_info):
	Created.
	(int main): Use e-hal API.
	(int e_open): Removed
	(int e_read_esys): Removed

2015-01-14  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Removing base addresses for
	clarity, most of these addresses will never change.
	Added missing registers in chip.
	Fixed names to correspond to architecture manual and datasheet for
	chip.
	* src/e-hal/src/epiphany-hal.c (int ee_read_reg): Adjust for
	above.
	(ssize_t ee_write_reg): Likewise.
	(static int enable_clock_gating): Likewise.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Fix inconsistencies with
	e_syscfg* types.
	* src/e-hal/src/epiphany-hal.c (int e_reset_system): Use the right
	type for rxcfg.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal-data.h: Rename all occurrences of
	'field' in ESYS register structs to 'fields'.
	* src/e-hal/src/epiphany-hal.c (int e_reset_system): Adjust for
	above change.
	(int ee_disable_system): Likewise.

2015-01-13  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (int e_reset_system): Set e-link TX
	clock divider back to 4 for select platforms.

2015-01-07  Ola Jeppsson  <ola@adapteva.com>

	* src/e-hal/src/epiphany-hal.c (static int enable_clock_gating):